[package]
name = "cyborgtime-serde"
version = "1.1.2"
authors = ["jean-airoldie <maxence.caron@protonmail.com>", "The Internet Cyborg Collective"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Serde support for the `cyborgtime` crate, fork from humantime-serde"
repository = "https://github.com/cyborg-rs/cyborgtime-serde"
readme = "README.md"
keywords = ["serde", "cyborgtime", "time", "duration"]

[dependencies]
cyborgtime = { version = "2.0", path = "../cyborgtime" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
version-sync = "0.8"
